MPS-34950 Use of template presentation